--- a/app.json
+++ b/app.json
@@ -31,16 +31,16 @@
         "projectId": "50590ee1-62ac-4451-a347-6177ffedd40d"
       },
       "firebase": {
-        "apiKey": "AIzaSyCxGn8fxM2TV273tbiLSUkNJ0LtXlqoUfE",
-        "authDomain": "clinicconnect-plus.firebaseapp.com",
-        "projectId": "clinicconnect-plus",
-        "storageBucket": "clinicconnect-plus.appspot.com",
-        "messagingSenderId": "450760553279",
-        "appId": "1:450760553279:web:e337b6d20595ad391ed98a",
-        "measurementId": "G-TCYJHRLKYF"
+        "apiKey": process.env.EXPO_PUBLIC_FIREBASE_API_KEY || "demo-api-key",
+        "authDomain": process.env.EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN || "demo-project.firebaseapp.com",
+        "projectId": process.env.EXPO_PUBLIC_FIREBASE_PROJECT_ID || "demo-project",
+        "storageBucket": process.env.EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET || "demo-project.appspot.com",
+        "messagingSenderId": process.env.EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID || "123456789",
+        "appId": process.env.EXPO_PUBLIC_FIREBASE_APP_ID || "1:123456789:web:abcdef",
+        "measurementId": process.env.EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID || "G-XXXXXXXXXX"
       },
       "gemini": {
-        "apiKey": "AIzaSyCibtwossRbkqbe0sl-aJbkfQOaZKa7e5Y",
+        "apiKey": process.env.EXPO_PUBLIC_GEMINI_API_KEY || "demo-gemini-key",
         "model": "gemini-1.5-flash-latest",
         "maxTokens": 500,
         "temperature": 0.7
